--- a/layouts/styles.module.scss
+++ b/layouts/styles.module.scss
@@ -1,3 +1,48 @@
 .container {
   background-color: #ffffff;
 }
+
+/* ibm-plex-mono-regular - latin */
+@font-face {
+  font-family: 'IBM Plex Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../assets/fonts/ibm-plex-mono-v12-latin-regular.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('../assets/fonts/ibm-plex-mono-v12-latin-regular.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../assets/fonts/ibm-plex-mono-v12-latin-regular.woff2')
+      format('woff2'),
+    /* Super Modern Browsers */
+      url('../assets/fonts/ibm-plex-mono-v12-latin-regular.woff') format('woff'),
+    /* Modern Browsers */
+      url('../assets/fonts/ibm-plex-mono-v12-latin-regular.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../assets/fonts/ibm-plex-mono-v12-latin-regular.svg#IBMPlexMono')
+      format('svg');
+  /* Legacy iOS */
+}
+
+/* ibm-plex-mono-500 - latin */
+@font-face {
+  font-family: 'IBM Plex Mono';
+  font-style: normal;
+  font-weight: 500;
+  src: url('../assets/fonts/ibm-plex-mono-v12-latin-500.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('../assets/fonts/ibm-plex-mono-v12-latin-500.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../assets/fonts/ibm-plex-mono-v12-latin-500.woff2')
+      format('woff2'),
+    /* Super Modern Browsers */
+      url('../assets/fonts/ibm-plex-mono-v12-latin-500.woff') format('woff'),
+    /* Modern Browsers */ url('../assets/fonts/ibm-plex-mono-v12-latin-500.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../assets/fonts/ibm-plex-mono-v12-latin-500.svg#IBMPlexMono')
+      format('svg');
+  /* Legacy iOS */
+}
